src/objects/Database_Server__c.object
<CustomObject>
    <fields>
        <fullName>Database_Type__c</fullName>
        <label>Database Type</label>
        <picklist>
            <picklistValues>
                <fullName>MySQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MongoDB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SQLServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PostgreSQL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Database_URL__c</fullName>
        <description>e.g http://server1.com:3601</description>
        <inlineHelpText>e.g http://server1.com:3601</inlineHelpText>
        <label>Database URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Server__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Server</label>
        <referenceTo>Server__c</referenceTo>
        <relationshipLabel>Database Server Connection</relationshipLabel>
        <relationshipName>Database_Servers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <description>username for database connection</description>
        <inlineHelpText>username for database connection</inlineHelpText>
        <label>username</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Database Server</label>
    <nameField>
        <displayFormat>DSN-{0000}</displayFormat>
        <label>Database Server Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Database Servers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>